# PolyGameX

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  FEATURES.md  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.bat  build.sh
docs/: ARCHITECTURE.md
examples/demo/: main.cpp
include/PolyGameX/: Engine.h
include/PolyGameX/Core/: Logger.h
include/PolyGameX/ECS/: Component.h  ECS.h  Entity.h
include/PolyGameX/Math/: Transform.h
include/PolyGameX/Physics/: Collider.h  PhysicsEngine.h  RigidBody.h
include/PolyGameX/Rendering/: Camera.h  Mesh.h  Renderer.h  Shader.h
include/PolyGameX/Scene/: SceneManager.h
include/PolyGameX/Utils/: DebugDraw.h  FileSystem.h  Profiler.h
platform/: pom.xml
platform/src/main/java/com/polygamex/assets/: AssetProcessor.java
scripts/: setup.py  setup_dependencies.py
scripts/polygamex/: __init__.py
scripts/polygamex/ai/: __init__.py  behavior_tree.py  pathfinding.py
scripts/polygamex/api/: game_script.py
scripts/polygamex/core/: engine_bridge.py
scripts/polygamex/procedural/: terrain_generator.py
src/core/: Engine.cpp  Logger.cpp
src/ecs/: ECS.cpp  Entity.cpp
src/math/: Transform.cpp
src/physics/: Collider.cpp  PhysicsEngine.cpp  RigidBody.cpp
src/rendering/: Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp
src/scene/: SceneManager.cpp
src/utils/: DebugDraw.cpp  FileSystem.cpp  Profiler.cpp
